[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/cutscenes/SupportSelectionMenu.gd" type="Script" id=2]
[ext_resource path="res://save_data/chapter_data/ToOldHell.tres" type="Resource" id=3]
[ext_resource path="res://save_data/chapter_data/GreavesOfClay.tres" type="Resource" id=4]
[ext_resource path="res://ui/cutscenes/ChapterClearer.tscn" type="PackedScene" id=5]

[node name="SupportSelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
chapter_data = ExtResource( 3 )
support_level_chapters = [ ExtResource( 4 ), ExtResource( 3 ), null, null ]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.0313726, 0.164706, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 910.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 209.0
margin_right = 620.0
margin_bottom = 238.0
text = "POST_BATTLE"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 302.0
margin_right = 620.0
margin_bottom = 331.0
text = "CHOOSE_A_PAIR"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 395.0
margin_right = 620.0
margin_bottom = 650.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 7
custom_constants/separation = 12
alignment = 1

[node name="YachieAndSakiButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 150.0
margin_right = 470.0
margin_bottom = 77.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 4
text = "YACHIE_AND_SAKI"

[node name="SakiAndYuumaButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 150.0
margin_top = 89.0
margin_right = 470.0
margin_bottom = 166.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 4
text = "SAKI_AND_YUUMA"

[node name="YuumaAndYachieButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 150.0
margin_top = 178.0
margin_right = 470.0
margin_bottom = 255.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 4
text = "YUUMA_AND_YACHIE"

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
visible = false
margin_left = 190.0
margin_top = 267.0
margin_right = 430.0
margin_bottom = 344.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 4
text = "RETURN"

[node name="ChapterClearers" type="Node" parent="."]

[node name="GreavesOfClay" parent="ChapterClearers" instance=ExtResource( 5 )]
current_chapter_data = ExtResource( 4 )
next_chapter_data = ExtResource( 3 )

[node name="ToOldHell" parent="ChapterClearers" instance=ExtResource( 5 )]
current_chapter_data = ExtResource( 3 )

[node name="ToOldHell2" parent="ChapterClearers" instance=ExtResource( 5 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
